--- a/src/common.css
+++ b/src/common.css
@@ -120,12 +120,12 @@
       color: white !important;
     }
 
-    .dashboard-button {
+    .dashboard-button, .dashboard-button * {
       background: #9E2A2B !important;
       color: white !important;
     }
 
-    .dashboard-button:hover {
+    .dashboard-button:hover, .dashboard-button:hover * {
       color: #d6a64f !important;
       cursor: pointer;
     }
